updated engineer to developer

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         <div id="icon-photo" class="d-flex justify-content-center mb-3">
             <img src="img/moriah-icon.jpg" alt="icon" id="icon">
         </div>
-        <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
+        <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Developer.
             <br>
             <br>
             I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/"
                                                                                 target="_blank">Codeup Dallas.</a> I am
-            seeking full time employment as a Software Engineer beginning in July 2020.
+            seeking full time employment as a Software Developer beginning in July 2020.
             <br>
             <br>
             I am an avid knowledge collector, seeking to expand the ways humans adapt to and interface with the machines
@@ -202,12 +202,12 @@
                         <img src="img/profile-photo.png" alt="photo" id="about-photo">
                     </div>
                     <p id="intro-paragraph">Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based
-                        Software Engineer.
+                        Software Developer.
                         <br>
                         <br>
                         I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/"
                                                                                             target="_blank">Codeup
-                            Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.
+                            Dallas.</a> I am seeking full time employment as a Software Developer beginning in July 2020.
                         <br>
                         <br>
                         I am an avid knowledge collector, seeking to expand the ways humans adapt to and interface with
