updated spacing on headings

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             <div id="about-me-page">
                 <div id="about-me-large">
-                    <h2 class="text-center">About Me</h2>
+                    <h2 class="text-center pt-3">About Me</h2>
                     <div id="profile-photo" class="d-flex justify-content-center mb-3">
                         <img src="img/profile-photo.png" alt="photo" id="about-photo">
                     </div>
@@ -225,7 +225,7 @@
             <!--                Skills Large-->
             <div id="skills-page">
                 <div id="skills-large">
-                    <h2 class="text-center ml-4">Technical skills</h2>
+                    <h2 class="text-center ml-4 pt-3">Technical skills</h2>
 
                     <ul id="skills-list-large" class="mt-2 text-center">
                         <li><i class="fab fa-html5 mr-2 mt-5"></i>HTML</li>
@@ -350,7 +350,7 @@
             <!--            Connect Large-->
             <div id="connect-page">
                 <div id="connect-large">
-                    <h2 class="text-center ml-5">Connect</h2>
+                    <h2 class="text-center ml-5 pt-3">Connect</h2>
                     <ul class="d-flex align-items-center flex-column text-center" id="contact-list">
                         <li class="outside-link"><i class="fab fa-linkedin mr-2 mt-5"></i><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/"
                                                     target="_blank" class="contact-link">LinkedIn</a></li>
